# teller-subgraph-health-monitor

./: .env.template  Cargo.toml  Dockerfile  README.md
.do/: app.yaml  app_spec.yaml  deploy.template.yaml
src/: endpoints.ron  health_bot.rs  main.rs  slack.rs
