[package]
name = "teller-subgraph-health-bot"

default-run = "health_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dotenvy = "0.15"
ethers = { version = "2.0", features = ["rustls"], default-features = false }



[[bin]]
name = "health_bot"
path = "src/health_bot.rs"

